Aligned VOs and classes to new DomainGuard.java Still need testing corrections